--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -29,7 +29,7 @@
 			<id>default-tools.jar</id>
 			<activation>
 				<file>
-					<exists>${java.home}/../lib/tools.jar</exists>
+					<exists>$C:/Program Files/Java/jdk1.8.0_91/lib/tools.jar</exists>
 				</file>
 			</activation>
 			<dependencies>
@@ -38,7 +38,7 @@
 					<artifactId>tools</artifactId>
 					<version>1.4.2</version>
 					<scope>system</scope>
-					<systemPath>${java.home}/../lib/tools.jar</systemPath>
+					<systemPath>$C:/Program Files/Java/jdk1.8.0_91/lib/tools.jar</systemPath>
 				</dependency>
 			</dependencies>
 		</profile>
@@ -46,7 +46,7 @@
             <id>mac-tools.jar</id>
             <activation>
                 <file>
-                    <exists>${java.home}/../Classes/classes.jar</exists>
+                    <exists>$C:/Program Files/Java/jdk1.8.0_91/Classes/classes.jar</exists>
                 </file>
             </activation>
             <dependencies>
@@ -55,7 +55,7 @@
                     <artifactId>tools</artifactId>
                     <version>1.4.2</version>
                     <scope>system</scope>
-                    <systemPath>${java.home}/../Classes/classes.jar</systemPath>
+                    <systemPath>$C:/Program Files/Java/jdk1.8.0_91/Classes/classes.jar</systemPath>
                 </dependency>
             </dependencies>
         </profile>
